Fixed bug in SEALConfig.cmake.in: the SEAL_USE_MSGSL and SEAL_USE_ZLIB were never set

--- a/cmake/SEALConfig.cmake.in
+++ b/cmake/SEALConfig.cmake.in
@@ -57,6 +57,9 @@ set(SEAL_DEBUG @SEAL_DEBUG@)
 set(SEAL_USE_CXX17 @SEAL_USE_CXX17@)
 set(SEAL_ENFORCE_HE_STD_SECURITY @SEAL_ENFORCE_HE_STD_SECURITY@)
 
+set(SEAL_USE_MSGSL @SEAL_USE_MSGSL@)
+set(SEAL_USE_ZLIB @SEAL_USE_ZLIB@)
+
 # Add the current directory to the module search path
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR})
 
