chore: added optional wasm cmake argument in the future

--- a/native/src/CMakeLists.txt
+++ b/native/src/CMakeLists.txt
@@ -67,6 +67,7 @@ function(enable_cxx_compiler_flag_if_supported flag)
     endif()
 endfunction()
 
+# enable_cxx_compiler_flag_if_supported("-msimd128")
 # enable_cxx_compiler_flag_if_supported("-Wall")
 # enable_cxx_compiler_flag_if_supported("-Wextra")
 # enable_cxx_compiler_flag_if_supported("-Wconversion")
