--- a/native/src/SEAL.vcxproj
+++ b/native/src/SEAL.vcxproj
@@ -52,6 +52,7 @@
     <ClInclude Include="seal\util\common.h" />
     <ClInclude Include="seal\util\croots.h" />
     <ClInclude Include="seal\util\defines.h" />
+    <ClInclude Include="seal\util\galois.h" />
     <ClInclude Include="seal\util\gcc.h" />
     <ClInclude Include="seal\util\globals.h" />
     <ClInclude Include="seal\util\hash.h" />
@@ -103,6 +104,7 @@
     <ClCompile Include="seal\util\blake2xb.c" />
     <ClCompile Include="seal\util\clipnormal.cpp" />
     <ClCompile Include="seal\util\croots.cpp" />
+    <ClInclude Include="seal\util\galois.cpp" />
     <ClCompile Include="seal\util\globals.cpp" />
     <ClCompile Include="seal\util\mempool.cpp" />
     <ClCompile Include="seal\util\numth.cpp" />
