Making SEAL iterators work with C++14

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,7 @@ set(SEAL_USE_SHARED_MUTEX OFF)
 set(SEAL_USE_IF_CONSTEXPR OFF)
 set(SEAL_USE_MAYBE_UNUSED OFF)
 set(SEAL_USE_NODISCARD OFF)
+set(SEAL_USE_FOR_EACH OFF)
 set(SEAL_LANG_FLAG "-std=c++14")
 if(SEAL_USE_CXX17)
     set(SEAL_USE_STD_BYTE ON)
@@ -62,6 +63,7 @@ if(SEAL_USE_CXX17)
     set(SEAL_USE_IF_CONSTEXPR ON)
     set(SEAL_USE_MAYBE_UNUSED ON)
     set(SEAL_USE_NODISCARD ON)
+    set(SEAL_USE_FOR_EACH ON)
     set(SEAL_LANG_FLAG "-std=c++17")
 endif()
 
