--- a/native/src/seal/util/config.h.in
+++ b/native/src/seal/util/config.h.in
@@ -17,7 +17,7 @@
 #cmakedefine SEAL_USE_IF_CONSTEXPR
 #cmakedefine SEAL_USE_MAYBE_UNUSED
 #cmakedefine SEAL_USE_NODISCARD
-#cmakedefine SEAL_USE_FOR_EACH
+#cmakedefine SEAL_USE_STD_FOR_EACH_N
 
 // Security
 #cmakedefine SEAL_THROW_ON_TRANSPARENT_CIPHERTEXT
