--- a/native/tests/SEALTest.vcxproj
+++ b/native/tests/SEALTest.vcxproj
@@ -81,6 +81,7 @@
     <ClCompile Include="seal\util\common.cpp" />
     <ClCompile Include="seal\util\galois.cpp" />
     <ClCompile Include="seal\util\hash.cpp" />
+    <ClCompile Include="seal\util\iterator.cpp" />
     <ClCompile Include="seal\util\locks.cpp" />
     <ClCompile Include="seal\util\mempool.cpp" />
     <ClCompile Include="seal\util\numth.cpp" />
