--- a/native/src/SEAL.vcxproj.filters
+++ b/native/src/SEAL.vcxproj.filters
@@ -265,6 +265,12 @@
     <ClCompile Include="seal\valcheck.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="seal\util\blake2xb.c">
+      <Filter>Source Files\util</Filter>
+    </ClCompile>
+    <ClCompile Include="seal\util\blake2b.c">
+      <Filter>Source Files\util</Filter>
+    </ClCompile>
     <ClCompile Include="seal\util\clipnormal.cpp">
       <Filter>Source Files\util</Filter>
     </ClCompile>
@@ -275,6 +281,9 @@
       <Filter>Source Files\util</Filter>
     </ClCompile>
     <ClCompile Include="seal\util\globals.cpp">
+      <Filter>Source Files\util</Filter>
+    </ClCompile>
+    <ClCompile Include="seal\util\hash.cpp">
       <Filter>Source Files\util</Filter>
     </ClCompile>
     <ClCompile Include="seal\util\mempool.cpp">
@@ -295,10 +304,16 @@
     <ClCompile Include="seal\util\rlwe.cpp">
       <Filter>Source Files\util</Filter>
     </ClCompile>
+    <ClCompile Include="seal\util\rns.cpp">
+      <Filter>Source Files\util</Filter>
+    </ClCompile>
     <ClCompile Include="seal\util\scalingvariant.cpp">
       <Filter>Source Files\util</Filter>
     </ClCompile>
     <ClCompile Include="seal\util\smallntt.cpp">
+      <Filter>Source Files\util</Filter>
+    </ClCompile>
+    <ClCompile Include="seal\util\streambuf.cpp">
       <Filter>Source Files\util</Filter>
     </ClCompile>
     <ClCompile Include="seal\util\uintarith.cpp">
@@ -314,15 +329,6 @@
       <Filter>Source Files\util</Filter>
     </ClCompile>
     <ClCompile Include="seal\util\ztools.cpp">
-      <Filter>Source Files\util</Filter>
-    </ClCompile>
-    <ClCompile Include="seal\util\blake2xb.c">
-      <Filter>Source Files\util</Filter>
-    </ClCompile>
-    <ClCompile Include="seal\util\blake2b.c">
-      <Filter>Source Files\util</Filter>
-    </ClCompile>
-    <ClCompile Include="seal\util\rns.cpp">
       <Filter>Source Files\util</Filter>
     </ClCompile>
   </ItemGroup>
